--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.5.9",
+    "aws-amplify": "^4.3.39",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "v1",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
